force-app/main/default/objects/Unified_Individual__c/Unified_Individual__c.object-meta.xml
<CustomObject>
    <label>Unified Individual</label>
    <nameField>
        <displayFormat>UI-{0000}</displayFormat>
        <label>Golden Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unified Individuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>