force-app/main/default/objects/Unified_Individual__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <description>The calculated confidence probability that the underlying raw records actually belong to the same person.</description>
    <label>Confidence Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>