force-app/main/default/objects/Unified_Individual__c/fields/Match_Key__c.field-meta.xml
<CustomField>
    <fullName>Match_Key__c</fullName>
    <externalId>true</externalId>
    <label>Match Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>