force-app/main/default/objects/Unified_Individual__c/fields/Total_Lifetime_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Lifetime_Value__c</fullName>
    <label>Total Lifetime Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>